--- a/src/App.css
+++ b/src/App.css
@@ -95,12 +95,8 @@
   min-width: 90%;
 }
 
-.moviesButton {
-  min-width: 100%;
-  width: 100%;
-  display: flex;
-  margin: 20px;
-  text-align: left;
+.movies-button-dropdown   {
+  border: 0px;
 }
 
 .movie-section-wrapper {
@@ -120,6 +116,7 @@
   padding-left: 25px;
 
 }
+
 .movie_header span {
   margin-right: 10px;
 }
@@ -135,8 +132,8 @@
 .movie_card {
   position: relative;
   display: block;
-  height:100%;
-  
+  height: 100%;
+
   max-height: 550px;
   overflow: hidden;
   border-radius: 10px;
@@ -165,7 +162,7 @@
   position: relative;
   padding-top: 25px;
   padding-left: 25px;
-  
+
 }
 
 .movie_card .info_section .movie_header h1 {
@@ -214,41 +211,49 @@
 
 
 @media screen and (min-width: 768px) {
-    .movie_header {
-        width: 70%;
-    }
-    .movie_desc {
-        width: 60%;
-    }
-    .info_section {
-        background: linear-gradient(to right, #0d0d0c 50%, transparent 100%);
-    }
-    .blur_back {
-        width: 80%;
-        background-position: -100% 10% !important;
-    }
+  .movie_header {
+    width: 70%;
+  }
+
+  .movie_desc {
+    width: 60%;
+  }
+
+  .info_section {
+    background: linear-gradient(to right, #0d0d0c 50%, transparent 100%);
+  }
+
+  .blur_back {
+    width: 80%;
+    background-position: -100% 10% !important;
+  }
 }
+
 @media screen and (max-width: 768px) {
   .movie_card {
-      width: 95%;
-      
-      min-height: 350px;
-      height: auto;
+    width: 95%;
+
+    min-height: 350px;
+    height: auto;
   }
+
   .blur_back {
-      width: 100%;
-      background-position: 50% 50% !important;
+    width: 100%;
+    background-position: 50% 50% !important;
   }
+
   .movie_header {
-      width: 100%;
-      margin-top: 85px;
+    width: 100%;
+    margin-top: 85px;
   }
+
   .movie_desc {
-      width: 100%;
+    width: 100%;
   }
+
   .info_section {
-      background: linear-gradient(to top, #141413 50%, transparent 100%);
-      display: inline-grid;
+    background: linear-gradient(to top, #141413 50%, transparent 100%);
+    display: inline-grid;
   }
 }
 
@@ -320,11 +325,11 @@ ul.pagination li {
   font-size: 1rem;
 }
 
-ul.pagination li:first-child{
+ul.pagination li:first-child {
   border-radius: 5px 0 0 5px;
 }
 
-ul.pagination li:last-child{
+ul.pagination li:last-child {
   border-radius: 0 5px 5px 0;
 }
 
@@ -351,4 +356,23 @@ ul.pagination li a.active {
   width: 48px;
   height: 30px;
   color: white;
+}
+
+.accordion-button {
+  background-color: black;
+  color: white;
+}
+
+.accordion-button:focus {
+  box-shadow: none;
+}
+
+.accordion-button:not(.collapsed) {
+  color: white;
+  background-color: black;
+}
+
+.accordion-body {
+  color: white;
+  background-color: black;
 }
